<resources>
    <string name="app_name">file_lister_navigator_selector_demo</string>
    <string name="MENU_app_properties">Свойства приложения</string>
    <string name="list_of_files_in">Список файлов в %1$s</string>
    <string name="it_is_not_a_dir">Это не каталог</string>
    <string name="MENU_close_app">Закрыть программу</string>
    <string name="login_to_yandex">Авторизоваться в Яндекс</string>
    <string name="logout_from_yandex">Выйти из Яндекса</string>
    <string name="multiple_mode_toggle_single">Один</string>
    <string name="multiple_mode_toggle_multiple">Несколько</string>
    <string name="selection_mode_dir">Каталог</string>
    <string name="selection_mode_file">Файл</string>
    <string name="MENU_storage_access">Доступ к хранилищу</string>
    <string name="only_dirs">Только каталоги</string>
    <string name="multiple_selection_mode">Множественный выбор</string>
    <string name="BUTTON_select_local">Выбрать локально</string>
    <string name="BUTTON_select_yandex">Выбрать в Яндекс.Диск-е</string>
    <string name="DIALOG_title_logout_from_yandex">Выйти из Яндекса?</string>
    <string name="DIALOG_message_yandex_auth_token_will_be_cleared">Токен авторизации в Яндекс будет забыт.</string>
    <string name="DIALOG_button_yes">Да</string>
    <string name="DIALOG_button_no">Нет</string>
    <string name="selection_result">Выбрано: %1$s</string>
    <string name="there_is_no_reading_access">Нет доступа не чтение</string>
    <string name="BUTTON_list_dir_recursively">Прочитать выбранный каталог рекурсивно</string>
    <string name="ERROR_single_dir_must_be_selected">Выберите один каталог</string>
    <string name="ERROR_unknown_storage_type">Неизвестный тип хранилища: %1$s</string>
    <string name="listing_dir_recursively">Рекурсивно читаю каталог «%1$s»...</string>
    <string name="recursive_dir_listing_result">Каталог: %1$s\n\nСодержимое:\n%2$s</string>
    <string name="BUTTON_select_local_saf">Выбрать локально, SAF</string>
    <string name="ERROR_selecting_dir">Ошибка выбора каталога</string>
</resources>