<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/localSelectButton"
        style="@style/full_width_button"
        android:text="@string/BUTTON_select_local"/>

    <Button
        android:id="@+id/yandexSelectButton"
        style="@style/full_width_button"
        android:backgroundTint="@color/yandex"
        android:text="@string/BUTTON_select_yandex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/dirModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:switchPadding="8dp"
            android:text="@string/only_dirs"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/multipleModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:checked="true"
            android:switchPadding="8dp"
            android:text="@string/multiple_selection_mode"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/listDirRecursivelyButton"
            style="@style/full_width_button"
            android:layout_weight="1"
            android:backgroundTint="#00BCD4"
            android:text="@string/BUTTON_list_dir_recursively" />

        <ImageButton
            android:id="@+id/cancelRecursiveListing"
            android:contentDescription="@string/description_listing_cancelling_button"
            android:src="@drawable/ic_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#FF9B40"
            android:layout_weight="0"/>

    </LinearLayout>

    <Button
        android:id="@+id/clearOutputButton"
        style="@style/full_width_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/BUTTON_clear_output" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="8dp"
        android:textColor="@color/error_message_fg"
        android:background="@color/error_message_bg"
        android:textSize="14sp"
        android:textAlignment="center"
        android:visibility="gone"
        tools:text="Сообщение об ошибке"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/outputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            tools:text="Выбранные элементы" />

        <!--android:text="Очень длинная строка, не помещающаяся на экране. Действительно не помещающаяся?"-->

    </ScrollView>

</LinearLayout>